--- a/static/styles.css
+++ b/static/styles.css
@@ -54,11 +54,8 @@ svg {
 /* Header styling */
 .header {
   position: absolute;
-  top: 20px;
-  left: 20px;
   display: flex;
   align-items: center;
-  gap: 15px;
   z-index: 10;
 }
 
@@ -79,6 +76,7 @@ svg {
   font-family: "Segoe UI", sans-serif;
   margin: 0;
   font-size: 2rem;
+  margin-top: -10px;
 }
 
 .header h3 {
