--- a/static/styles.css
+++ b/static/styles.css
@@ -2,7 +2,7 @@
   --bg-color: #0b0b0b;
   --land-color: #2a2a2a;
   --hover-color: #ffffff;
-  --tooltip-bg: rgba(255, 255, 255, 0.1);
+  --tooltip-bg: rgba(18, 18, 18, 0.1);
   --tooltip-text: #fff;
 }
 
@@ -10,14 +10,79 @@ body {
   margin: 0;
   background: var(--bg-color);
   color: var(--tooltip-text);
-  font-family: "Inter", sans-serif;
-  overflow: hidden;
+  font-family: "Segoe UI";
+  overflow: auto;
+}
+
+.main-container{
+  display:flex;
+  flex-direction: column;
+}
+
+.logo-container {
+  display: flex;
+  align-items: center;
+}
+
+.header-container {
+  display: flex;
+  flex-direction: column;
+  margin-left: -20px;
+}
+
+.header-container h1 {
+  margin-top: 75px;
+  margin-bottom: 0px;
+}
+
+.navbar{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 20px;
+  background-color: var(--land-color);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 100px;
+  width: 100%;
+}
+
+.navbar img {
+  width: 200px;
+  height: 150px;
+  margin-top: 8px;
+  margin-left: -80px;
+}
+
+.navbar a {
+  color: var(--tooltip-text);
+  text-decoration: none;
+  margin: 0 10px; /* Adjust spacing between links */
+  font-size: 1rem;
+  white-space: nowrap; /* Ensure links stay in one line */
+}
+
+.navbar a:hover {
+  color: var(--hover-color);
+}
+
+.navbar .links {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  flex-grow: 1;
 }
 
 #hero {
-  width: 100vw;
-  height: 100vh;
   position: relative;
+  width: 100%;
+  height: 600px;
+  margin-top: 150px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  padding: 50px 20px;
 }
 
 svg {
@@ -53,15 +118,16 @@ svg {
 
 /* Header styling */
 .header {
-  position: absolute;
   display: flex;
   align-items: center;
+  justify-content: space-between;
   z-index: 10;
+  padding: 20px;
 }
 
 .header img {
-  width: 150px;
-  display: block;
+  width: 120px;
+  height: auto;
 }
 
 .header .text {
@@ -69,20 +135,22 @@ svg {
   flex-direction: column;
   align-items: flex-start;
   margin: 0;
+  margin-left: 20px;
 }
 
 .header h1 {
   color: white;
   font-family: "Segoe UI", sans-serif;
   margin: 0;
-  font-size: 2rem;
-  margin-top: -10px;
+  font-size: 2.5rem;
+  margin-bottom: 5px;
 }
 
 .header h3 {
   color: white;
   font-family: "Segoe UI", sans-serif;
   margin: 5px 0 0 0;
-  font-size: 1rem;
+  font-size: 1.2rem;
+  margin-top: 0;
 }
 
