--- a/static/styles.css
+++ b/static/styles.css
@@ -1,75 +1,78 @@
 :root {
   --bg-color: #0b0b0b;
   --land-color: #2a2a2a;
-  --hover-color: #ffffff;
+  --hover-color: #ffffff7b;
   --tooltip-bg: rgba(18, 18, 18, 0.1);
   --tooltip-text: #fff;
 }
 
 body {
   margin: 0;
+  max-width: 100%;
   background: var(--bg-color);
   color: var(--tooltip-text);
   font-family: "Segoe UI";
-  overflow: auto;
 }
 
-.main-container{
-  display:flex;
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--land-color);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: fit-content;
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+
+.main-container {
+  display: flex;
   flex-direction: column;
 }
 
 .logo-container {
+  padding: 5px 20px;
   display: flex;
+  flex-direction: row;
   align-items: center;
+}
+
+.img-container {
+  height: auto;
+  width: 125px;
 }
 
 .header-container {
   display: flex;
   flex-direction: column;
-  margin-left: -20px;
+  text-align: left;
+  align-items: flex-start;
 }
 
-.header-container h1 {
-  margin-top: 75px;
-  margin-bottom: 0px;
+.header-container h1,
+.header-container h2 {
+  font-family: "Segoe UI", sans-serif;
+  margin: 0;
+  color: var(--tooltip-text);
 }
 
-.navbar{
+.nav-links {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  gap: 20px;
   padding: 5px 20px;
-  background-color: var(--land-color);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  height: 100px;
-  width: 100%;
 }
 
-.navbar img {
-  width: 200px;
-  height: 150px;
-  margin-top: 8px;
-  margin-left: -80px;
-}
-
-.navbar a {
+.nav-links a {
   color: var(--tooltip-text);
   text-decoration: none;
-  margin: 0 10px; /* Adjust spacing between links */
-  font-size: 1rem;
-  white-space: nowrap; /* Ensure links stay in one line */
+  font-size: 1.25rem;
+  font-weight: bold;
+  transition: color 0.3s;
 }
 
-.navbar a:hover {
+.nav-links a:hover {
   color: var(--hover-color);
-}
-
-.navbar .links {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  flex-grow: 1;
 }
 
 #hero {
@@ -82,7 +85,6 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 50px 20px;
 }
 
 svg {
@@ -153,4 +155,3 @@ svg {
   font-size: 1.2rem;
   margin-top: 0;
 }
-
